--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "requirejs": "~2.1.8"
   },
   "devDependencies": {
-    "qunit": "~1.12.0"
+    "qunit": "~1.12.0",
+    "sinon": "~1.7.3"
   }
 }
